--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Site internet de tests</title>
+    <title>Bonjour</title>
     <style>
       body {
         background-color: #f9f9f9;
@@ -50,8 +50,6 @@
             verify: { projectID: '679eb021485466595303ae72' },
             url: 'https://general-runtime.voiceflow.com',
             versionID: 'production',
-            voice: {
-              url: 'https://runtime.voiceflow.com',
             },
             render: {
               mode: 'overlay',
