--- a/index.html
+++ b/index.html
@@ -1,81 +1,52 @@
-<!-- THIS IS AN EXAMPLE PAGE AND SHOULD NOT BE USED OUTSIDE OF DEVELOPMENT -->
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Bonjour</title>
-    <style>
-      body {
-        background-color: #f9f9f9;
-      }
-      #flat-chat {
-        width: 100vw;
-        height: 100vh;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-      #confetti-canvas {
-        position: fixed;
-        z-index: 999;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        pointer-events: none;
-      }
-    </style>
-  </head>
-  <body>
-    <canvas id="confetti-canvas"></canvas>
-    <div id="flat-chat"></div>
-    <div id="voiceflow-chat-frame"></div>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-    <script type="text/javascript">
-      import { DisableInputExtension,
-                VideoExtension,
-                TimerExtension,
-                FormExtension,
-                MapExtension,
-                FileUploadExtension,
-                KBUploadExtension,
-                DateExtension,
-                ConfettiExtension,
-                FeedbackExtension } from '/extensions.js';
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>DrivIA</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
-      (function (d, t) {
-        var v = d.createElement(t),
-          s = d.getElementsByTagName(t)[0];
-        v.onload = function () {
-          window.voiceflow.chat.load({
-            verify: { projectID: '679eb021485466595303ae72' },
-            url: 'https://general-runtime.voiceflow.com',
-            versionID: 'production',
-            },
-            render: {
-              mode: 'overlay',
-            },
-            autostart: true,
-            allowDangerousHTML: true,
-            assistant: {
-              extensions: [
-                DisableInputExtension,
-                VideoExtension,
-                TimerExtension,
-                FormExtension,
-                MapExtension,
-                FileUploadExtension,
-                KBUploadExtension,
-                DateExtension,
-                ConfettiExtension,
-                FeedbackExtension,
-              ],
-            },
-          });
-        };
-        v.src = 'https://cdn.voiceflow.com/widget-next/bundle.mjs';
-        v.type = 'text/javascript';
-        s.parentNode.insertBefore(v, s);
+    <!-- Bandeau fixe en haut de la page (sans logo et nom d'entreprise) -->
+    <header class="fixed-header">
+        <nav class="main-nav">
+            <ul>
+                <li><a href="a-propos-de-nous.html">À propos de nous</a></li>
+                <li><a href="projets.html">Projets</a></li>
+                <li><a href="nos-services.html">Nos services</a></li>
+                <li><a href="contact.html" class="contact-btn">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Section pour une future illustration -->
+    <section class="illustration-banner">
+        <div class="leitmotiv-container">
+            <h2 class="leitmotiv-text">L'IA qui fait tout</h2>
+            <h2 class="leitmotiv-text indent">Pour vous !</h2>
+        </div>
+    </section>
+
+    <!-- Script Voiceflow pour intégrer le nouveau chatbot avec extensions -->
+    <script type="text/javascript">
+            
+      (function(d, t) {
+          var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
+          v.onload = function() {
+            window.voiceflow.chat.load({
+              verify: { projectID: '679eb021485466595303ae72' },
+              url: 'https://general-runtime.voiceflow.com',
+              versionID: 'production', 
+              voice: { 
+                url: "https://runtime-api.voiceflow.com" 
+              },
+              autostart: true,
+            });
+          }
+          v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
       })(document, 'script');
     </script>
-  </body>
+
+</body>
 </html>
