--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>DrivIA</title>
+    <title>Bonjour</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -29,7 +29,7 @@
     </section>
 
     <!-- Script Voiceflow pour intégrer le nouveau chatbot avec extensions -->
-    <script type="text/javascript">
+    <script type="module">
             
       (function(d, t) {
           var v = d.createElement(t), s = d.getElementsByTagName(t)[0];
