--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Bonjour</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -50,6 +50,9 @@
               voice: { 
                 url: "https://runtime-api.voiceflow.com" 
               },
+            render: {
+              mode: 'overlay',
+            },
               autostart: true,
             });
           }
