--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
               mode: 'overlay',
             },
               autostart: true,
+              allowDangerousHTML: true,
+              assistant: {
+                  extensions: [
+                    VideoExtension,
+                    TimerExtension,
+                    FormExtension,
+                    MapExtension,
+                    FileUploadExtension,
+                    KBUploadExtension,
+                    DateExtension,
+                    ConfettiExtension,
+                    FeedbackExtension,
+                  ],
+                }
             });
           }
           v.src = "https://cdn.voiceflow.com/widget-next/bundle.mjs"; v.type = "text/javascript"; s.parentNode.insertBefore(v, s);
