--- a/index.html
+++ b/index.html
@@ -122,5 +122,23 @@
       })(document, 'script');
     </script>
 
+    <script type ="text/javascript">
+function sleep(ms) {
+return new Promise(resolve = > setTimeout(resolve, ms));
+}
+async function runCode() {
+if (window.innerWidth > = 1024) (// Check if the screen width is greater than or equal to 1024
+(desktop)
+let element = document.querySelector(".vfrc-launcher");
+while (!element) {
+element = document.querySelector(".vfrc-launcher");
+await sleep(1000);
+}
+element.click():
+}
+}
+runCode():
+</script>
+
 </body>
 </html>
